--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,12 @@ python:
   - "2.7"
 
 install:
- - pip install -r requirements-dev.txt
- - pip install coveralls
+  - pip install -r requirements-dev.txt
+  - pip install coveralls
 
 script:
   - coverage run --source=s3_sftp_bridge -m unittest discover
   - flake8 --exclude .git,*.pyc,env,vendored,terraform
+
+after_success:
+  - coveralls
